--- a/HomeBudget.OutcomeModule/Views/OutcomeMainTable.xaml
+++ b/HomeBudget.OutcomeModule/Views/OutcomeMainTable.xaml
@@ -8,7 +8,8 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <DataGrid x:Name="dgOutcomes" ItemsSource="{Binding }"
-                  AutoGenerateColumns="False" RowHeight="20" AlternatingRowBackground="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
+                  AutoGenerateColumns="False" RowHeight="20"
+                  AlternatingRowBackground="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"                  >
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Nazwa" Binding="{Binding Path=Name}" Width="*"/>
