--- a/HomeBudget.OutcomeModule/Views/OutcomeFilters.xaml
+++ b/HomeBudget.OutcomeModule/Views/OutcomeFilters.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0" Text="Kategoria:" Margin="5,0,5,0"/>
-        <ComboBox Grid.Row="1" Margin="5,0,5,0"  IsTextSearchEnabled="True"/>
+        <ComboBox Grid.Row="1" Margin="5,0,5,0" x:Name="CbCategory"  IsTextSearchEnabled="True"/>
 
         <TextBlock Grid.Row="2" Text="Kwota od:" Margin="5,0,5,0"/>
         <TextBox Grid.Row="3"  Margin="5,0,5,0"/>
@@ -41,7 +41,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="btnFilter" Content="Filtruj" Height="25" Width="80" MinWidth="80" Grid.Column="0" HorizontalAlignment="Center"/>
+            <Button x:Name="btnFilter" Content="Filtruj" Height="25" Width="80" MinWidth="80" Grid.Column="0" HorizontalAlignment="Center" Click="btnFilter_Click"/>
             <Button x:Name="btnResetFilter" Content="Reset" Height="25" Width="80" MinWidth="80" Grid.Column="1" HorizontalAlignment="Center"/>
         </Grid>
     </Grid>
