--- a/HomeBudget.OutcomeModule/Views/OutcomeMainTable.xaml
+++ b/HomeBudget.OutcomeModule/Views/OutcomeMainTable.xaml
@@ -6,10 +6,17 @@
              xmlns:local="clr-namespace:HomeBudget.OutcomeModule"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+    <Grid x:Name="LayoutGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0"/>
+        </Grid.ColumnDefinitions>
+
         <DataGrid x:Name="dgOutcomes" ItemsSource="{Binding }"
+                  Grid.Column="0"
+                  Panel.ZIndex="10"
                   AutoGenerateColumns="False" RowHeight="20"
-                  AlternatingRowBackground="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"                  >
+                  AlternatingRowBackground="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Nazwa" Binding="{Binding Path=Name}" Width="*"/>
@@ -17,7 +24,13 @@
                 <DataGridTextColumn Header="Data" Binding="{Binding Path=EntryDate}" Width="*"/>
                 <DataGridTextColumn Header="Kwota" Binding="{Binding Path=Price}" Width="*"/>
             </DataGrid.Columns>
-
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="_Nowy wydatek" Click="MenuItem_Click" />
+                </ContextMenu>
+            </DataGrid.ContextMenu>
         </DataGrid>
+       
+        <local:EditOutcome x:Name="NewOutcomeView" Width="0"  Grid.Column="0" Panel.ZIndex="0" HorizontalAlignment="Right"/>
     </Grid>
 </UserControl>
